Prevented edit banner from wrapping

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -39,7 +39,7 @@ main {
     column-gap: 2rem;
     display: flex;
     flex-direction: row;
-    flex-wrap: wrap;
+    flex-wrap: nowrap;
     justify-content: space-between;
 }
 
